ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financeapp-ingress
  namespace: db-devlaba1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: financeapp.devlaba.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-app-service
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
